# lmfit

./: .gitignore  .gitlab-ci.yml  CHANGELOG  CHANGE_LOG  CITATION  CMakeLists.txt  COPYING  INSTALL  Makefile.am  Makefile.in  README.md  TODO  aclocal.m4  azure-pipelines.yml  config.h.in  configure  configure.ac
.pc/debian-changes-3.1-1/: CHANGE_LOG
autom4te.cache/: output.0  requests  traces.0
cmake/: AssertLibraryFunction.cmake  FindFitTest.cmake
debian/: changelog  control  copyright  files  liblmmin-dev.examples  liblmmin-dev.manpages  liblmmin3.substvars  lmfit-dev.install  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  shlibs.local.ex  substvars  watch
debian/liblmmin-dev/DEBIAN/: control  md5sums
debian/liblmmin-dev/usr/share/doc/liblmmin-dev/examples/: curve1.c
debian/liblmmin3/DEBIAN/: control  md5sums  shlibs
debian/liblmmin3/usr/lib/: liblmmin.so.3.0.2
debian/lmfit-dev/DEBIAN/: control  md5sums
debian/lmfit/DEBIAN/: control  md5sums
debian/lmfit/usr/share/doc/lmfit/: copyright
debian/patches/: debian-changes-3.1-1  series
debian/tmp/usr/lib/: liblmmin.so.3  liblmmin.so.3.0.2
debian/tmp/usr/share/man/man3/: lmmin.3
demo/: CMakeLists.txt  Makefile.am  Makefile.in  curve1.c  curve2.c  curve_old.c  fourexp  fourexp.c  hat  hat.c  lm_test  lm_test.c  morobropro  morobropro.c  nonlin1  nonlin1.c  powell  powell.c  surface1  surface1.c
doc/: Makefile.am  Makefile.in  dmake  lmcurve_fit.3  lmfit.3  lmfit.html  lmfit.pod  lmfit.txt  lmfit.xml  lmmin.3
doc/src/: .htaccess
fittest/: CMakeLists.txt  runfittest.c
lib/: CMakeLists.txt  Makefile.am  Makefile.in  lm_eval.c  lmcurve.c  lmcurve.h  lmerr.c  lmerr.h  lmfit-config.cmake.in  lmfit.h  lminvert.c  lminvert.h  lmmin.c  lmmin.h  lmstruct.h
man/: CMakeLists.txt  Makefile.am  Makefile.in  lmcurve.pod  lmfit.pod  lmmin.pod  lmmin2.pod
ruby/: README  lmfit-ruby.i  lmfit-ruby_wrap.c
ruby/inline/: curve1_rubyinline.rb
test/: CMakeLists.txt  Makefile.am  Makefile.in  MoGH81-04  MoGH81-04.c  framework.c  framework.h  powell.c  runtests  runtests.c  test_inversion.c  test_qr.c  testsuite1.c
